minute updates done on ui

--- a/public/order-styles.css
+++ b/public/order-styles.css
@@ -45,11 +45,18 @@ h3{
 }
 
 .user-details {
-    background-color: #fff;
+    flex: 3;
+    background: #f9f9f9;
+    padding: 10px 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+
 }
+
+.user-details .order-info{
+    margin-top: 20px;
+    width: fit-content;
+    }
 
 .order-card {
     border: 1px solid #e0e0e0;
