--- a/public/cart-style.css
+++ b/public/cart-style.css
@@ -10,6 +10,9 @@
 }
 
 h2 {
+    font-family: 'Racing Sans One', sans-serif;
+    font-size: 1.3rem;
+    font-weight: 500;
     text-align: center;
     margin-bottom: 20px;
 }
