--- a/public/wallet-styles.css
+++ b/public/wallet-styles.css
@@ -18,16 +18,28 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-h1{
+.wallet-details h1{
     font-family: 'Racing Sans One', sans-serif;
     font-size: 48px;
     align-items: center;
 }
 
- h2, h3 {
+.wallet-details h2 {
+    text-align: right;
+    font-size: 1.3rem;
+    color: rgb(217, 0, 0);
+    font-weight: 700;
+    margin-bottom: 30px;
+    margin-top: 10px;
+ }
+
+h3 {
+    font-size: 1.2rem;
     text-align: left;
     color: #333;
-    font-weight: 500;
+    font-weight: 700;
+    margin-bottom: 5px;
+    margin-top: 15px;
 }
 
 .wallet-balance {
@@ -86,41 +98,27 @@ table th, table td {
 }
 
 .right-sidebar {
-    flex: 1;
-    background: #ffffff;
-    padding: 20px;
+    width: 25%;
+    background-color: #f9f9f9;
     border-radius: 8px;
+    padding: 20px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .right-sidebar h3 {
     margin-bottom: 15px;
-    font-family: 'Racing Sans One', sans-serif;
-    font-size: 24px;
 }
 
 .right-sidebar ul {
-    list-style: none;
+    list-style-type: none;
     padding: 0;
 }
 
 .right-sidebar ul li {
     margin: 10px 0;
-    font-size: 18px;
-    font-weight: 600;
 }
 
-.right-sidebar ul .selected{
-    font-weight: 700;
-    font-style: italic;
-    color: #495057;
-}
-
-.sidebar ul li a {
-    text-decoration: none;
+.right-sidebar ul li.selected {
+    font-weight: bold;
     color: #007bff;
-}
-
-.right-sidebar ul li a:hover {
-    text-decoration: underline;
 }
