--- a/views/admin/sales-report.ejs
+++ b/views/admin/sales-report.ejs
@@ -26,6 +26,8 @@
                                     <th>Product Name</th>
                                     <th>Total Sales Count</th>
                                     <th>Total Revenue</th>
+                                    
+                                    <th>Average Revenue per Product</th>
                                 </tr>
                             </thead>
                             <tbody>
