--- a/views/admin/brands.ejs
+++ b/views/admin/brands.ejs
@@ -206,7 +206,15 @@
             }
 
             async function deleteBrand(brandId) {
-                const confirmation = confirm("Are you sure you want to delete this brand?");
+                const confirmation = await Swal.fire({
+                    title: "Are you sure?",
+                    text: "Are you sure to delete this brand?",
+                    icon: "warning",
+                    showCancelButton: true,
+                    confirmButtonColor: "#3085d6",
+                    cancelButtonColor: "#d33",
+                    confirmButtonText: "Yes, delete it!",
+                })
                 if (!confirmation) return;
 
                 try {
