--- a/views/admin/sales-report.ejs
+++ b/views/admin/sales-report.ejs
@@ -56,7 +56,7 @@
             </form>
             <div class="download">
                 <a href="/admin/sales-report-pdf?filterType=<%= filterType %>&startDate=<%= startDate %>&endDate=<%= endDate %>" class="btn btn-primary">Download PDF</a>
-                <a href="/admin/sales-report-excel?filterType=<%= filterType %>&startDate=<%= startDate %>&endDate=<%= endDate %>" class="btn btn-primary">Download Excel</a>
+                <a href="/admin/sales-report-excel?filterType=<%= filterType %>&startDate=<%= startDate %>&endDate =<%= endDate %>" class="btn btn-primary">Download Excel</a>
             </div>
         </div>
 
@@ -77,7 +77,7 @@
                         <td>₹<%= sale.price.toFixed(2) %></td>
                         <td><%= sale.totalSalesCount %></td>
                         <td>₹<%= sale.totalRevenue.toFixed(2) %></td>
-                        <td>₹<%= sale.productDiscount.toFixed(2) %></td>
+                        <td>₹<%= sale.totalDiscount.toFixed(2) %></td>
                     </tr>
                 <% }) %>
             </tbody>
