referral done, final check done

--- a/views/admin/add-offer.ejs
+++ b/views/admin/add-offer.ejs
@@ -149,6 +149,7 @@
                     <label> Product<input type="radio" name="offerGroup" value="Product" /></label>
                     <label> Category<input type="radio" name="offerGroup" value="Category" /></label>
                     <label> Brand<input type="radio" name="offerGroup" value="Brand" /></label>
+                    <label> Referral<input type="radio" name="offerGroup" value="Referral" /></label>
                 </div>
                 <span class="error-message" id="offerGroupError"></span>
             </div>
