--- a/views/admin/edit-offer.ejs
+++ b/views/admin/edit-offer.ejs
@@ -158,6 +158,7 @@
                 <label> Product<input type="radio" name="offerGroup" value="Product" <%= offer.offerGroup === 'Product' ? 'checked' : '' %> /></label>
                 <label> Category<input type="radio" name="offerGroup" value="Category" <%= offer.offerGroup === 'Category' ? 'checked' : '' %> /></label>
                 <label> Brand<input type="radio" name="offerGroup" value="Brand" <%= offer.offerGroup === 'Brand' ? 'checked' : '' %> /></label>
+                <label> Referral<input type="radio" name="offerGroup" value="Referral" <%= offer.offerGroup === 'Referral' ? 'checked' : '' %> /></label>
             </div><span class="error-message" id="offerGroupError"></span>
         </div>
 
